# Fonline-Android

./: .gitignore  BUILD_WINDOWS.md  PORTING.md  README.md  build.gradle.kts  gradle.properties  gradle.properties.example  settings.gradle.kts
.github/workflows/: android-debug.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/fonline/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  sdl_main.cpp
app/src/main/java/com/example/fonline/: GameSurfaceView.kt  MainActivity.kt  NativeBridge.kt  SDLMainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/fonline/: ExampleUnitTest.kt
build_logs/: build-ITER-0002.txt  build-ITER-0003.txt
codex_logs/: ITER-0001.md  ITER-0002.md  ITER-0003.md  ITER-0004.md  ITER-0005.md
cpp/: CMakeLists.txt  main.cpp  native_bridge.cpp
engine_src/fonline-master/Source/Applications/: ClientApp.cpp
engine_src/fonline-master/Source/Client/: SoundManager.cpp  SparkExtension.cpp  SparkExtension.h  VideoClip.cpp  VisualParticles.cpp
engine_src/fonline-master/Source/Client/Compat/: AcmStrmStub.h  SparkStubs.h
engine_src/fonline-master/Source/Common/: AssimpStubs.h  Common.h
engine_src/fonline-master/Source/Essentials/: BasicCore.h  Containers.h  ExceptionHadling.h  ExtendedTypes.h  FormatCompat.h  HashedString.h  Logging.h  SafeArithmetics.h  StringUtils.h  StrongType.h  TimeRelated.h
engine_src/fonline-master/Source/Essentials/ankerl/: unordered_dense.h
engine_src/fonline-master/Source/Frontend/: ApplicationInit.cpp  Rendering.cpp
gradle/wrapper/: gradle-wrapper.properties
